--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html>
 <head>
+     <link rel="stylesheet" href="stils.css.html">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 * {
