--- a/css/stils.css.html
+++ b/css/stils.css.html
@@ -7,9 +7,7 @@ and open the template in the editor.
 <html>
     <head>
         <style>
-            body {background-color: powderblue;}
-            h1   {color: blue;}
-            p    {color: red;}
+            div ~ p{color:red;}
 </style>
     </head>
     <body>
