--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ and open the template in the editor.
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <link rel="stylesheet" href="stils.css.html">
+  <link rel="stylesheet" href="style.css">
   <title>Bootstrap Theme Simply Me</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,7 +35,7 @@ and open the template in the editor.
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">WHO</a></li>
+        <li><a href="#">div</a></li>
         <li><a href="#">WHAT</a></li>
         <li><a href="#">WHERE</a></li>
       </ul>
@@ -45,7 +45,7 @@ and open the template in the editor.
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">Who Am I?</h3>
+  <h3 class="margin">HTML div tags</h3>
   <img src="bird.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
   <h3>I'm an adventurer</h3>
 </div>
