--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ and open the template in the editor.
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/html/style.css">
   <title>Bootstrap Theme Simply Me</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
