--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ and open the template in the editor.
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <link rel="stylesheet" href="/html/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Bootstrap Theme Simply Me</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -36,8 +36,8 @@ and open the template in the editor.
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">div</a></li>
-        <li><a href="#">WHAT</a></li>
-        <li><a href="#">WHERE</a></li>
+        <li><a href="#">span</a></li>
+        <li><a href="#">mazakslielaks</a></li>
       </ul>
     </div>
   </div>
@@ -53,7 +53,9 @@ and open the template in the editor.
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">What Am I?</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+  <p>Tags div definē HTML dokumenta sadalījumu vai sadaļu.</p>
+  <p>To izmnto kā tagu, ko piepilda ar CSS un mnipulē ar JavaScript.</p>
+  <p>Tag div var ievietot jebkāda veida saturu.</p>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon glyphicon-search"></span> Search
   </a>
