--- a/index.html
+++ b/index.html
@@ -47,14 +47,16 @@ and open the template in the editor.
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">HTML div tags</h3>
   <img src="bird.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-  <h3>I'm an adventurer</h3>
+  <p>Tags div definē HTML dokumenta sadalījumu vai sadaļu.</p>
+  <p>To izmanto kā tagu, ko piepilda ar CSS un mnipulē ar JavaScript.</p>
+  <p>Tag div var ievietot jebkāda veida saturu.</p>
 </div>
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-  <h3 class="margin">What Am I?</h3>
+  <h3 class="margin">what ama i?</h3>
   <p>Tags div definē HTML dokumenta sadalījumu vai sadaļu.</p>
-  <p>To izmnto kā tagu, ko piepilda ar CSS un mnipulē ar JavaScript.</p>
+  <p>To izmanto kā tagu, ko piepilda ar CSS un mnipulē ar JavaScript.</p>
   <p>Tag div var ievietot jebkāda veida saturu.</p>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon glyphicon-search"></span> Search
