--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@ and open the template in the editor.
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-  <h3 class="margin">what ama i?</h3>
-  <p>Tags div definē HTML dokumenta sadalījumu vai sadaļu.</p>
-  <p>To izmanto kā tagu, ko piepilda ar CSS un mnipulē ar JavaScript.</p>
-  <p>Tag div var ievietot jebkāda veida saturu.</p>
+  <h3 class="margin">HTML span tags</h3>
+  <p>Tags span izmanto, lai iezīmētu teksta daļu vai dokumenta daļu.</p>
+  <p>Tagu span CSS var viegli noformēt vai ar JavaScript var izmantot, izmantojot klases vai id atribūtu.</p>
+  <p>Tag span ir līdzīgs elementam div, bet div ir bloka līmeņa elements un span ir iekļauts elements.</p>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon glyphicon-search"></span> Search
   </a>
