--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ and open the template in the editor.
   <p>Tag div var ievietot jebkāda veida saturu.</p>
 </div>
 
+
+
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">HTML span tags</h3>
@@ -65,7 +67,10 @@ and open the template in the editor.
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">Where To Find Me?</h3><br>
+  <h3 class="margin">HTML video tags</h3><br>
+  <p>Tagu video izmanto, lai ievietotu video saturu dokumentā, piemēram, filmas klipā vai citās video straumēs.</p>
+  <p>Teksts starp tagiem video un video tiks parādīts tikai tajās pārlūkprogrammās, kas neatbalsta elementu video.</p>
+  <p>HTML formātā ir trīs atbalstīti video formāti: MP4, WebM un OGG.</p>
   <div class="row">
     <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
