--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ and open the template in the editor.
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">div</a></li>
         <li><a href="#">span</a></li>
-        <li><a href="#">mazakslielaks</a></li>
+        <li><a href="#">video</a></li>
       </ul>
     </div>
   </div>
