--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@ and open the template in the editor.
   <p>HTML formātā ir trīs atbalstīti video formāti: MP4, WebM un OGG.</p>
   <div class="row">
     <div class="col-sm-4">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>CSS ANIMATIONS</p>
+      <p>Animācija ļauj elementam pakāpeniski mainīties no viena stila uz otru.</p>
+      <p>Lai izmantotu CSS animāciju, vispirms jānorāda daži animācijas atslēgkadri.</p>
+      <p>Atslēgkadri satur, kādi stili elementam būs noteiktā laikā.</p>
       <img src="birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
