--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ and open the template in the editor.
   <div class="row">
     <div class="col-sm-4">
       <p>CSS ANIMATIONS</p>
+      <p>CSS ļauj animēt HTML elementus, neizmantojot JavaScript vai Flash!</p>
       <p>Animācija ļauj elementam pakāpeniski mainīties no viena stila uz otru.</p>
       <p>Lai izmantotu CSS animāciju, vispirms jānorāda daži animācijas atslēgkadri.</p>
       <p>Atslēgkadri satur, kādi stili elementam būs noteiktā laikā.</p>
