--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@ and open the template in the editor.
       <p>Lai izmantotu CSS animāciju, vispirms jānorāda daži animācijas atslēgkadri.</p>
       <p>Atslēgkadri satur, kādi stili elementam būs noteiktā laikā.</p>
       <img src="birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+    div {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  position: relative;
+  animation-name: example;
+  animation-duration: 4s;
+  animation-delay: 2s;
+}
+
+@keyframes example {
+  0%   {background-color:red; left:0px; top:0px;}
+  25%  {background-color:yellow; left:200px; top:0px;}
+  50%  {background-color:blue; left:200px; top:200px;}
+  75%  {background-color:green; left:0px; top:200px;}
+  100% {background-color:red; left:0px; top:0px;}
+}
     </div>
     <div class="col-sm-4"> 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
