--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ and open the template in the editor.
     <div class="col-sm-4"> 
         
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <div></div>
       <img src="birds2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
