--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@ and open the template in the editor.
       <img src="birds2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>CSS @KEYFRAME RULE</p>
+      <p>Animācija tiek veidota, pakāpeniski pārejot no viena CSS stila komplekta uz citu.</p>
+      <p>Animācijas laikā CSS stilu kopu var mainīt daudzas reizes.</p>
       <img src="birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
