--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@ and open the template in the editor.
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">HTML video tags</h3><br>
-  <p>Tagu video izmanto, lai ievietotu video saturu dokumentā, piemēram, filmas klipā vai citās video straumēs.</p>
-  <p>Teksts starp tagiem video un video tiks parādīts tikai tajās pārlūkprogrammās, kas neatbalsta elementu video.</p>
-  <p>HTML formātā ir trīs atbalstīti video formāti: MP4, WebM un OGG.</p>
+  <p>Tagu video izmanto, lai ievietotu video saturu dokumentā, piemēram, filmas klipā vai citās video straumēs. Teksts starp tagiem video un video tiks parādīts tikai tajās pārlūkprogrammās, kas neatbalsta elementu video. HTML formātā ir trīs atbalstīti video formāti: MP4, WebM un OGG.</p>
   <div class="row">
     <div class="col-sm-4">
       <p>CSS ANIMATIONS</p>
@@ -85,7 +83,7 @@ and open the template in the editor.
     </div>
     <div class="col-sm-4"> 
         
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>CSS STYLING IMAGES - ROUNDED</p>
       <div></div>
       <img src="birds2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
