--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@ and open the template in the editor.
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">HTML div tags</h3>
   <img src="bird.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-  <p>Tags div definē HTML dokumenta sadalījumu vai sadaļu.</p>
-  <p>To izmanto kā tagu, ko piepilda ar CSS un mnipulē ar JavaScript.</p>
-  <p>Tag div var ievietot jebkāda veida saturu.</p>
+  <p>Tags div definē HTML dokumenta sadalījumu vai sadaļu.To izmanto kā tagu, ko piepilda ar CSS un mnipulē ar JavaScript. Tag div var ievietot jebkāda veida saturu.</p>
 </div>
 
 
@@ -59,9 +57,7 @@ and open the template in the editor.
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">HTML span tags</h3>
-  <p>Tags span izmanto, lai iezīmētu teksta daļu vai dokumenta daļu.</p>
-  <p>Tagu span CSS var viegli noformēt vai ar JavaScript var izmantot, izmantojot klases vai id atribūtu.</p>
-  <p>Tag span ir līdzīgs elementam div, bet div ir bloka līmeņa elements un span ir iekļauts elements.</p>
+  <p>Tags span izmanto, lai iezīmētu teksta daļu vai dokumenta daļu. Tagu span CSS var viegli noformēt vai ar JavaScript var izmantot, izmantojot klases vai id atribūtu. Tags span ir līdzīgs elementam div, bet div ir bloka līmeņa elements un span ir iekļauts elements.</p>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon glyphicon-search"></span> Search
   </a>
@@ -75,24 +71,20 @@ and open the template in the editor.
     <div class="col-sm-4">
       <p> </p>
       <p>CSS ANIMATIONS</p>
-      <p>CSS ļauj animēt HTML elementus, neizmantojot JavaScript vai Flash!</p>
-      <p>Animācija ļauj elementam pakāpeniski mainīties no viena stila uz otru.</p>
-      <p>Lai izmantotu CSS animāciju, vispirms jānorāda daži animācijas atslēgkadri.</p>
-      <p>Atslēgkadri satur, kādi stili elementam būs noteiktā laikā.</p>
+      <p>CSS ļauj animēt HTML elementus, neizmantojot JavaScript vai Flash! Animācija ļauj elementam pakāpeniski mainīties no viena stila uz otru. Lai izmantotu CSS animāciju, vispirms jānorāda daži animācijas atslēgkadri. Atslēgkadri satur, kādi stili elementam būs noteiktā laikā.</p>
       <img src="birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     
     </div>
     <div class="col-sm-4"> 
-      <p></p> 
+      <p> </p> 
       <p>CSS STYLING IMAGES - ROUNDED</p>
       <div></div>
       <img src="birds2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p></p>
+      <p> </p>
       <p>CSS @KEYFRAME RULE</p>
-      <p>Animācija tiek veidota, pakāpeniski pārejot no viena CSS stila komplekta uz citu.</p>
-      <p>Animācijas laikā CSS stilu kopu var mainīt daudzas reizes.</p>
+      <p>Animācija tiek veidota, pakāpeniski pārejot no viena CSS stila komplekta uz citu. Animācijas laikā CSS stilu kopu var mainīt daudzas reizes.</p>
       <img src="birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
