--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ and open the template in the editor.
     <div class="col-sm-4">
       <p> </p>
       <p>CSS ANIMATIONS</p>
-      <p>CSS ļauj animēt HTML elementus, neizmantojot JavaScript vai Flash! Animācija ļauj elementam pakāpeniski mainīties no viena stila uz otru. Lai izmantotu CSS animāciju, vispirms jānorāda daži animācijas atslēgkadri. Atslēgkadri satur, kādi stili elementam būs noteiktā laikā.</p>
+      <p>CSS ļauj animēt HTML elementus, neizmantojot JavaScript vai Flash! Animācija ļauj elementam pakāpeniski mainīties no viena stila uz otru. </p>
       <img src="birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     
     </div>
