--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ and open the template in the editor.
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="ainimation.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/ainimation.css">
   <style>
       
 </style>
