--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ and open the template in the editor.
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">HTML div tags</h3>
   <img src="bird.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-  <p>Tags div definē HTML dokumenta sadalījumu vai sadaļu.To izmanto kā tagu, ko piepilda ar CSS un mnipulē ar JavaScript. Tag div var ievietot jebkāda veida saturu.</p>
+  <p>Tags div definē HTML dokumenta sadalījumu vai sadaļu. To izmanto kā tagu, ko piepilda ar CSS un mAnipulē ar JavaScript. Tag div var ievietot jebkāda veida saturu.</p>
 </div>
 
 
@@ -71,6 +71,14 @@ and open the template in the editor.
     <div class="col-sm-4">
       <p> </p>
       <p>CSS ANIMATIONS</p>
+      <div class="myDiv">
+          @keyframes example {
+  0%   {background-color:red; left:0px; top:0px;}
+  25%  {background-color:yellow; left:200px; top:0px;}
+  50%  {background-color:blue; left:200px; top:200px;}
+  75%  {background-color:green; left:0px; top:200px;}
+  100% {background-color:red; left:0px; top:0px;}
+}
       <p>CSS ļauj animēt HTML elementus, neizmantojot JavaScript vai Flash! Animācija ļauj elementam pakāpeniski mainīties no viena stila uz otru. </p>
       <img src="birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     
