--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ and open the template in the editor.
       </div>
       
       <p>CSS ļauj animēt HTML elementus, neizmantojot JavaScript vai Flash! Animācija ļauj elementam pakāpeniski mainīties no viena stila uz otru. </p>
-      <img src="birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="images/div.png" class="img-responsive margin" style="width:100%" alt="Image">
     
     </div>
     <div class="col-sm-4"> 
