--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ and open the template in the editor.
     </div>
     <div class="col-sm-4"> 
       <p> </p>
-      <p>CSS @KEYFRAME RULE</p>
+      <p>CSS gradient</p>
       <p>Animācija tiek veidota, pakāpeniski pārejot no viena CSS stila komplekta uz citu. Animācijas laikā CSS stilu kopu var mainīt daudzas reizes.</p>
       <img src="birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
