--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ and open the template in the editor.
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">HTML div tags</h3>
-  <img src="div.png" class="img-responsive img-circle margin" style="display:inline" alt="tags div" width="350" height="350">
+  <img src="images/div.png" class="img-responsive img-circle margin" style="display:inline" alt="tags div" width="350" height="350">
   <p>Tags div definē HTML dokumenta sadalījumu vai sadaļu. To izmanto kā tagu, ko piepilda ar CSS un mAnipulē ar JavaScript. Tag div var ievietot jebkāda veida saturu.</p>
 </div>
 
