--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ and open the template in the editor.
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">HTML div tags</h3>
-  <img src="images/div.jpg" class="img-responsive img-circle margin" style="display:inline" alt="tags div" width="350" height="350">
+  <img src="images/div.jpg" class="img-responsive margin" style="" alt="tags div" width="350" height="350">
   <p>Tags div definē HTML dokumenta sadalījumu vai sadaļu. To izmanto kā tagu, ko piepilda ar CSS un mAnipulē ar JavaScript. Tag div var ievietot jebkāda veida saturu.</p>
 </div>
 
@@ -73,7 +73,7 @@ and open the template in the editor.
       <p>CSS ANIMATIONS</p>
       <p>CSS ļauj animēt HTML elementus, neizmantojot JavaScript vai Flash! Animācija ļauj elementam pakāpeniski mainīties no viena stila uz otru. </p>
       <div class="myDiv">
-      <img src="images/div.png" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="images/div.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     </div>
     <div class="col-sm-4"> 
