--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@ and open the template in the editor.
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">div</a></li>
-        <li><a href="#">span</a></li>
-        <li><a href="#">video</a></li>
+        <li><a href="#">&lt;div&gt;</a></li>
+        <li><a href="#">&lt;span&gt;</a></li>
+        <li><a href="#">&lt;video&gt;</a></li>
       </ul>
     </div>
   </div>
@@ -47,9 +47,9 @@ and open the template in the editor.
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">HTML div tags</h3>
+  <h3 class="margin">HTML &lt;div&gt; tags</h3>
   <img src="images/div.jpg" class="img-responsive margin" style="display:inline" alt="tags div" width="350" height="350">
-  <p>Tags div definē HTML dokumenta sadalījumu vai sadaļu. To izmanto kā tagu, ko piepilda ar CSS un mAnipulē ar JavaScript. Tag div var ievietot jebkāda veida saturu.</p>
+  <p>Tags &lt;div&gt; definē HTML dokumenta sadalījumu vai sadaļu. To izmanto kā tagu, ko piepilda ar CSS un mAnipulē ar JavaScript. Tag div var ievietot jebkāda veida saturu.</p>
 </div>
 
 
