--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ and open the template in the editor.
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">&lt;div&gt; </h3>
   <img src="images/div.jpg" class="img-responsive margin" style="display:inline" alt="tags div" width="350" height="350">
-  <p>Tags &lt;div&gt; definē HTML dokumenta sadalījumu vai sadaļu. To izmanto kā tagu, ko piepilda ar CSS un mAnipulē ar JavaScript. Tag div var ievietot jebkāda veida saturu.</p>
+  <p>Tags &lt;div&gt; definē HTML dokumenta sadalījumu vai sadaļu. To izmanto kā tagu, ko piepilda ar CSS un manipulē ar JavaScript. Tag div var ievietot jebkāda veida saturu.</p>
 </div>
 
 
