--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ and open the template in the editor.
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">&lt;span&gt;</h3>
+ <img src="images/div.jpg" class="img-responsive margin" style="display:inline" alt="tags div" width="350" height="350">
   <p>Tags span izmanto, lai iezīmētu teksta daļu vai dokumenta daļu. Tagu span CSS var viegli noformēt vai ar JavaScript var izmantot, izmantojot klases vai id atribūtu. Tags span ir līdzīgs elementam div, bet div ir bloka līmeņa elements un span ir iekļauts elements.</p>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon glyphicon-search"></span> Search
