--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ and open the template in the editor.
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">&lt;div&gt; </h3>
+  <h3 class="margin">HTML &lt;div&gt tags; </h3>
   <img src="images/div.jpg" class="img-responsive margin" style="display:inline" alt="tags div" width="350" height="350">
   <p>Tags &lt;div&gt; definē HTML dokumenta sadalījumu vai sadaļu. To izmanto kā tagu, ko piepilda ar CSS un manipulē ar JavaScript. Tag div var ievietot jebkāda veida saturu.</p>
 </div>
@@ -56,7 +56,7 @@ and open the template in the editor.
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-  <h3 class="margin">&lt;span&gt;</h3>
+  <h3 class="margin">HTML &lt;span&gt; tags</h3>
  <img src="images/span.png" class="img-responsive margin" style="display:inline" alt="tags div" width="1500" height="350">
   <p>Tags span izmanto, lai iezīmētu teksta daļu vai dokumenta daļu. Tagu span CSS var viegli noformēt vai ar JavaScript var izmantot, izmantojot klases vai id atribūtu. Tags span ir līdzīgs elementam div, bet div ir bloka līmeņa elements un span ir iekļauts elements.</p>
   <a href="#" class="btn btn-default btn-lg">
@@ -66,7 +66,7 @@ and open the template in the editor.
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">&lt;video&gt;</h3><br>
+  <h3 class="margin">HTML &lt;video&gt; tags</h3><br>
   <p>Tagu video izmanto, lai ievietotu video saturu dokumentā, piemēram, filmas klipā vai citās video straumēs. Teksts starp tagiem video un video tiks parādīts tikai tajās pārlūkprogrammās, kas neatbalsta elementu video. HTML formātā ir trīs atbalstīti video formāti: MP4, WebM un OGG.</p>
   <div class="row">
     <div class="col-sm-4">
