--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ and open the template in the editor.
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">HTML &lt;div&gt tags; </h3>
+  <h3 class="margin">HTML &lt;div&gt; tags</h3>
   <img src="images/div.jpg" class="img-responsive margin" style="display:inline" alt="tags div" width="350" height="350">
   <p>Tags &lt;div&gt; definē HTML dokumenta sadalījumu vai sadaļu. To izmanto kā tagu, ko piepilda ar CSS un manipulē ar JavaScript. Tag div var ievietot jebkāda veida saturu.</p>
 </div>
