--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ and open the template in the editor.
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">HTML &lt;div&gt; tags</h3>
   <img src="images/div.jpg" class="img-responsive margin" style="display:inline" alt="tags div" width="350" height="350">
-  <p>Tags &lt;div&gt; definē HTML dokumenta sadalījumu vai sadaļu. To izmanto kā tagu, ko piepilda ar CSS un manipulē ar JavaScript. Tag div var ievietot jebkāda veida saturu.</p>
+  <p>Tags &lt;div&gt; definē HTML dokumenta sadalījumu vai sadaļu. To izmanto kā tagu, ko piepilda CSS un manipulē JavaScript. Tag div var ievietot jebkāda veida saturu.</p>
 </div>
 
 
@@ -58,10 +58,10 @@ and open the template in the editor.
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">HTML &lt;span&gt; tags</h3>
  <img src="images/span.png" class="img-responsive margin" style="display:inline" alt="tags div" width="1500" height="350">
-  <p>Tags span izmanto, lai iezīmētu teksta daļu vai dokumenta daļu. Tagu span CSS var viegli noformēt vai ar JavaScript var izmantot, izmantojot klases vai id atribūtu. Tags span ir līdzīgs elementam div, bet div ir bloka līmeņa elements un span ir iekļauts elements.</p>
-  <a href="#" class="btn btn-default btn-lg">
+  <p>Tags &lt;span&gt;  izmanto, lai iezīmētu teksta daļu vai dokumenta daļu. Tagu &lt;span&gt; CSS var viegli noformēt vai JavaScript, izmantojot klases vai id atribūtu. Tags span ir līdzīgs elementam div, bet div ir bloka līmeņa elements un span ir iekļauts elements.</p>
+  <!--<a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon glyphicon-search"></span> Search
-  </a>
+  </a>-->
 </div>
 
 <!-- Third Container (Grid) -->
