--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@ and open the template in the editor.
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">HTML &lt;video&gt; tags</h3><br>
+  <video width="320" height="240" controls>
+  <source src="images/rubija.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
   <p>Tagu video izmanto, lai ievietotu video saturu dokumentā, piemēram, filmas klipā vai citās video straumēs. Teksts starp tagiem video un video tiks parādīts tikai tajās pārlūkprogrammās, kas neatbalsta elementu video. HTML formātā ir trīs atbalstīti video formāti: MP4, WebM un OGG.</p>
   <div class="row">
     <div class="col-sm-4">
