--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ and open the template in the editor.
 </video>
   <p> </p>
   <p>Tagu video izmanto, lai ievietotu video saturu dokumentā, piemēram, filmas klipā vai citās video straumēs. Teksts starp tagiem video un video tiks parādīts tikai tajās pārlūkprogrammās, kas neatbalsta elementu video. HTML formātā ir trīs atbalstīti video formāti: MP4, WebM un OGG.</p>
+  <img src="images/video.png" class="img-responsive margin" style="display:inline" alt="tags div" width="1200" height="350">
   <div class="row">
     <div class="col-sm-4">
       <p> </p>
