--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ and open the template in the editor.
       <p>CSS ANIMATIONS</p>
       <p>CSS ļauj animēt HTML elementus, neizmantojot JavaScript vai Flash! Animācija ļauj elementam pakāpeniski mainīties no viena stila uz otru. </p>
       <div class="myDiv">
-      <img src="images/div.jpg" class="img-responsive margin" style="transform: scaleX(-1);transform: scaleX(-1);" alt="Image">
+      <img src="images/div..png" class="img-responsive margin" style="transform: scaleX(-1);transform: scaleX(-1);" alt="Image">
     </div>
     </div>
     <div class="col-sm-4"> 
