--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@ and open the template in the editor.
       <p> </p>
       <p>CSS ANIMATIONS</p>
       <p>CSS ļauj animēt HTML elementus, neizmantojot JavaScript vai Flash! Animācija ļauj elementam pakāpeniski mainīties no viena stila uz otru. </p>
-      <div class="myDiv">
+      <div class="circle">
+          </div>
       <img src="images/div..png" class="img-responsive margin" style="transform: scaleX(-1);transform: scaleX(-1);" alt="Image">
     </div>
     </div>
