--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@ and open the template in the editor.
     <div class="col-sm-4">
       <p> </p>
       <p>CSS ANIMATIONS</p>
+      <span class="circle"></span>
       <p>CSS ļauj animēt HTML elementus, neizmantojot JavaScript vai Flash! Animācija ļauj elementam pakāpeniski mainīties no viena stila uz otru. </p>
-      <div class="circle">
-          </div>
+      
       <img src="images/div..png" class="img-responsive margin" style="transform: scaleX(-1);transform: scaleX(-1);" alt="Image">
     </div>
     </div>
