--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ and open the template in the editor.
     <div class="col-sm-4">
       <p> </p>
       <p>CSS ANIMATIONS</p>
-      <span class="circle"></span>
+      <span class="css/circle"></span>
       <p>CSS ļauj animēt HTML elementus, neizmantojot JavaScript vai Flash! Animācija ļauj elementam pakāpeniski mainīties no viena stila uz otru. </p>
       
       <img src="images/div..png" class="img-responsive margin" style="transform: scaleX(-1);transform: scaleX(-1);" alt="Image">
