--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ and open the template in the editor.
     <div class="col-sm-4">
       <p> </p>
       <p>CSS ANIMATIONS</p>
-      <div class="myDiv">Hover on me</div>
+      <div class="myDiv"><span style="color:white">Hover on me</span></div>
       <p>CSS ļauj animēt HTML elementus, neizmantojot JavaScript vai Flash! Animācija ļauj elementam pakāpeniski mainīties no viena stila uz otru. </p>
       <img src="images/hover.png" class="img-responsive margin" style="width:80%" alt="Image">
     </div>
