--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ and open the template in the editor.
       <div class="col-sm-4"> 
       <p> </p>
       <p>CSS gradient</p>
-      <div id="grad1">Animācija tiek veidota, pakāpeniski pārejot no viena CSS stila komplekta uz citu. Animācijas laikā CSS stilu kopu var mainīt daudzas reizes.</div>
+      <div id="grad1"><span style="color:white">Animācija tiek veidota, pakāpeniski pārejot no viena CSS stila komplekta uz citu. Animācijas laikā CSS stilu kopu var mainīt daudzas reizes.</span></div>
       <img src="birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
