--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ and open the template in the editor.
     </div>
       <div class="col-sm-4"> 
       <p> </p>
-      <p>CSS gradient</p>
+      <p>CSS GRADIENT</p>
       <div id="grad1"><span style="color:white">Animācija tiek veidota, pakāpeniski pārejot no viena CSS stila komplekta uz citu. Animācijas laikā CSS stilu kopu var mainīt daudzas reizes.</span></div>
       <img src="images/gradient.png" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
@@ -95,7 +95,7 @@ and open the template in the editor.
       <p>CSS STYLING IMAGES - ROUNDED</p>
       <p>CSS var veidot arī apaļus rāmjus, rāmjus ārus attēla - kvadrātiskus. Un vēl dažādas citas funkcijas. Vairāk : <a href="https://www.w3schools.com/css/css3_images.asp">www.w3schools.com</a></p>
       <div></div>
-      <img src="birds2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="images/rubija1.jpg" class="img-responsive img-rounded margin" style="width:100%" alt="Rūbija">
     </div>
   </div>
 </div>
