--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ and open the template in the editor.
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">HTML &lt;video&gt; tags</h3><br>
   <p>Tagu video izmanto, lai ievietotu video saturu dokumentā, piemēram, filmas klipā vai citās video straumēs. Teksts starp tagiem video un video tiks parādīts tikai tajās pārlūkprogrammās, kas neatbalsta elementu video. HTML formātā ir trīs atbalstīti video formāti: MP4, WebM un OGG.</p>
+  <br>
   <video width="320" height="240" controls>
   <source src="images/rubija.mp4" type="video/mp4">
 </video>
@@ -80,22 +81,22 @@ and open the template in the editor.
   <div class="row">
     <div class="col-sm-4">
       <p> </p>
-      <p>CSS ANIMATIONS</p>
-      <div class="myDiv"><span style="color:white">Hover on me</span></div>
+      <p>CSS ANIMATIONS</p><br>
+      <div class="myDiv"><span style="color:white">Hover on me</span></div><br>
       <p>CSS ļauj animēt HTML elementus, neizmantojot JavaScript vai Flash! Animācija ļauj elementam pakāpeniski mainīties no viena stila uz otru. </p>
       <img src="images/hover.png" class="img-responsive margin" style="width:80%" alt="Image">
     </div>
       <div class="col-sm-4"> 
       <p> </p> 
-      <p>CSS STYLING IMAGES - ROUNDED</p>
+      <p>CSS STYLING IMAGES - ROUNDED</p><br>
       <p>CSS var veidot arī apaļus rāmjus, rāmjus ārus attēla - kvadrātiskus. Un vēl dažādas citas funkcijas. Vairāk : <a href="https://www.w3schools.com/css/css3_images.asp">www.w3schools.com</a></p>
       <div></div>
       <img src="images/rubija1.jpg" class="img-responsive img-rounded margin" style="width:100%" alt="Rūbija">
     </div>
       <div class="col-sm-4"> 
       <p> </p>
-      <p>CSS GRADIENT</p>
-      <div id="grad1"><span style="color:white">Animācija tiek veidota, pakāpeniski pārejot no viena CSS stila komplekta uz citu. Animācijas laikā CSS stilu kopu var mainīt daudzas reizes.</span></div>
+      <p>CSS GRADIENT</p><br>
+      <div id="grad1"><span style="color:white">Gradients apvieno divas krāsas, redzama pakāpeniska to pāreja.</span></div>
       <br>
       <img src="images/gradient.png" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
