--- a/index.html
+++ b/index.html
@@ -92,13 +92,14 @@ and open the template in the editor.
       <p>CSS var veidot arī apaļus rāmjus, rāmjus ārus attēla - kvadrātiskus. Un vēl dažādas citas funkcijas. Vairāk : <a href="https://www.w3schools.com/css/css3_images.asp">www.w3schools.com</a></p>
       <div></div>
       <img src="images/rubija1.jpg" class="img-responsive img-rounded margin" style="width:100%" alt="Rūbija">
+      <img src="images/image.jpg" class="img-responsive margin" style="width:100%" alt="kods">
     </div>
       <div class="col-sm-4"> 
       <p> </p>
       <p>CSS GRADIENT</p><br>
       <div id="grad1"><span style="color:white">Gradients apvieno divas krāsas, redzama pakāpeniska to pāreja.</span></div>
       <br>
-      <img src="images/gradient.png" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="images/gradient.png" class="img-responsive margin" style="width:100%" alt="kods">
     </div>
   </div>
 </div>
